# eg-dados-apache-spark

./: .gitignore  README.md  delta-lake.ipynb  mkdocs.yml  pyproject.toml  pyspark-icerberg.ipynb
.ipynb_checkpoints/: pyspark-icerberg-checkpoint.ipynb
data/covid-19/: .~lock.vaccinations.csv#
docs/: 404.html  delta_lake.md  exemplos.md  iceberg.md  index.html  index.md  instalacao.md  referencias.md  uso.md
docs/delta_lake/: index.html
docs/exemplos/: index.html
docs/iceberg/: index.html
docs/instalacao/: index.html
docs/referencias/: index.html
docs/search/: search_index.json
docs/uso/: index.html
exemplos/: index.html
instalacao/: index.html
notebooks/: pyspark-iceberg.ipynb
referencias/: index.html
search/: search_index.json
site/: 404.html
site/delta_lake/: index.html
site/iceberg/: index.html
spark-warehouse/location_delta/: .part-00000-2383cd4c-75a8-43ed-b61a-f1573a675ebf-c000.snappy.parquet.crc  .part-00000-3f4c0e0c-4ee9-45d1-b25f-0b1ea4c46e5d-c000.snappy.parquet.crc  .part-00000-b82f3522-d878-4226-b1fb-9184b0362de3-c000.snappy.parquet.crc  part-00000-2383cd4c-75a8-43ed-b61a-f1573a675ebf-c000.snappy.parquet  part-00000-3f4c0e0c-4ee9-45d1-b25f-0b1ea4c46e5d-c000.snappy.parquet  part-00000-b82f3522-d878-4226-b1fb-9184b0362de3-c000.snappy.parquet
spark-warehouse/location_delta/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc  .00000000000000000002.crc.crc  .00000000000000000002.json.crc  .00000000000000000003.crc.crc  (+3 more)
uso/: index.html
